ajout du password generator avec le visuel

--- a/templates/password_generator.html
+++ b/templates/password_generator.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Strength Analyzer</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='generator.css') }}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+<h1>Password Generator</h1>
+<form method="POST" class="generator-form">
+    <input type="text" name="length" placeholder="Enter your desired password length" required>
+    <div class="checkbox-group">
+        <div>
+            <input type="checkbox" id="numbers" name="numbers" value="Numbers">
+            <label for="numbers">Numbers</label>
+        </div>
+        <div>
+            <input type="checkbox" id="symbols" name="symbols" value="Symbols">
+            <label for="symbols">Symbols</label>
+        </div>
+    </div>
+    <button type="submit">Generate</button>
+</form>
+{% if password %}
+<div class="result">
+    <input type="text" id="passwordId" name="password" value="{{ password }}" readonly><br><br>
+    <button id="copy-button" class="copy-button" aria-label="Copy to clipboard">
+        <i class="fas fa-clipboard"></i>
+    </button>
+</div>
+{% endif %}
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const copyButton = document.getElementById("copy-button");
+        const passwordField = document.getElementById("passwordId");
 
+        if (copyButton && passwordField) {
+            copyButton.addEventListener("click", function () {
+                const password = passwordField.value;
+
+                if (password) {
+                    navigator.clipboard.writeText(password).then(() => {
+                        alert("Password copied to clipboard!");
+                    }).catch(err => {
+                        console.error("Error copying password:", err);
+                    });
+                } else {
+                    alert("No password to copy!");
+                }
+            });
+        }
+    });
+</script>
 </body>
 </html>
